# SublimeLinter-any-lsp

./: .flake8  README.md  _loader.py  _lsp.py  linter.py  mypy.ini  pyproject.toml
core/: __init__.py  _lsp.py  _lsp.pyi  server.py  utils.py
tests/: test_util.py
