[project]
name = "SublimeLinter-any-lsp"
version = "0.1.0"
description = "SublimeLinter plugin for LSP integration"
authors = [
    {name = "herr.kaste", email = "herr.kaste@gmail.com"},
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["W293"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
lines-after-imports = 2
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
  "typing"
]
known-first-party = ["SublimeLinter"]

[tool.ruff.lint.isort.sections]
typing = ["typing", "typing_extensions"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.per-file-ignores]
"linter.py" = ["E402"]
